--- a/static/css/clientes/Fermag/baseFermag.css
+++ b/static/css/clientes/Fermag/baseFermag.css
@@ -153,7 +153,7 @@
       position: fixed;
       top: -16px;
       right: -150%;
-      background-color: #3880b4;
+      background-color: rgba(53, 79, 98, 0.9);
       width: 100%;
       height: 100%;
       padding-top: 65px;
